# poubelle

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/db-engine/: Cargo.toml
crates/db-engine/src/: engine.rs  executor.rs
crates/engine/: Cargo.toml
crates/engine/src/: engine.rs  executor.rs  lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs
crates/sdk/: Cargo.toml  README.md
crates/sdk/examples/: basic.rs
crates/sdk/src/: client.rs  error.rs  lib.rs  types.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  handler.rs  http.rs  main.rs
crates/storage/: Cargo.toml
crates/storage-engine/: Cargo.toml
crates/storage-engine/src/: lib.rs  page.rs  storage.rs  types.rs
crates/storage/src/: backup.rs  lib.rs  page.rs  storage.rs
sdk-typescript/: README.md  package.json  tsconfig.json
sdk-typescript/examples/: example.ts
sdk-typescript/src/: index.ts
sdk/go/: README.md  go.mod  poubelle.go
sdk/go/examples/: basic.go  go.mod
sdk/typescript/: README.md  build.ts  package.json
sdk/typescript/examples/: example.ts
