[workspace]
members = [
    "crates/storage-engine",
    "crates/db-engine",
    "crates/parser",
    "crates/server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["poubelle contributors"]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
anyhow = "1.0"
thiserror = "1.0"
