[package]
name = "poubelle-sdk"
version.workspace = true
edition.workspace = true
description = "Rust SDK for Poubelle DB"
license = "MIT"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "basic"
path = "examples/basic.rs"
