[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "poubelle"
path = "src/main.rs"

[dependencies]
engine = { path = "../engine" }
parser = { path = "../parser" }
storage = { path = "../storage" }
tokio.workspace = true
anyhow.workspace = true
sha2 = "0.10"
dotenvy = "0.15"
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
serde.workspace = true
serde_json = "1.0"

