[package]
name = "storage"
version.workspace = true
edition.workspace = true

[features]
default = []
s3-backup = ["aws-sdk-s3", "aws-config", "tokio"]

[dependencies]
serde.workspace = true
bincode.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dashmap = "6.0"
chrono = { version = "0.4", features = ["serde"] }

# S3 backup dependencies (optional)
aws-sdk-s3 = { version = "1.65", optional = true }
aws-config = { version = "1.5", optional = true }
tokio = { workspace = true, optional = true }

